[package]
name = "druid_enum_view"
version = "0.1.0"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid_enum_view_derive = {path = "../druid_enum_view_derive"}

#[dev-dependencies]
druid = {git = "https://github.com/xi-editor/druid"}